[PRMT-1004] Added swagger documentation and error handling to ehr-message-received endpoint
