# src/api/deduction-requests/ehr-message-received-controller.js
@@ -5,21 +5,29 @@ import {
 import { param } from 'express-validator';
 import { checkEHRComplete } from '../../services/ehrRepo/ehr-details-request';
 import { Status } from '../../models/DeductionRequest';
+import { updateLogEventWithError } from '../../middleware/logging';
 
 export const ehrMessageReceivedValidationRules = [
   param('conversationId').isUUID('4').withMessage("'conversationId' provided is not of type UUIDv4")
 ];
 
 export const ehrMessageReceived = async (req, res) => {
-  const { conversationId } = req.params;
-  const deductionRequest = await getDeductionRequestByConversationId(conversationId);
-  if (deductionRequest === null) {
-    res.sendStatus(404);
-    return;
+  try {
+    const { conversationId } = req.params;
+    const deductionRequest = await getDeductionRequestByConversationId(conversationId);
+    if (deductionRequest === null) {
+      res.sendStatus(404);
+      return;
+    }
+    const isEhrComplete = await checkEHRComplete(deductionRequest.nhs_number, conversationId);
+    if (isEhrComplete) {
+      await updateDeductionRequestStatus(conversationId, Status.EHR_REQUEST_RECEIVED);
+    }
+    res.sendStatus(204);
+  } catch (err) {
+    updateLogEventWithError(err);
+    res.status(503).json({
+      errors: err.message
+    });
   }
-  const isEhrComplete = await checkEHRComplete(deductionRequest.nhs_number, conversationId);
-  if (isEhrComplete) {
-    await updateDeductionRequestStatus(conversationId, Status.EHR_REQUEST_RECEIVED);
-  }
-  res.sendStatus(204);
 };
