# src/swagger.json
@@ -116,6 +116,51 @@
         ]
       }
     },
+    "/deduction-requests/{conversationId}/ehr-message-received": {
+      "patch": {
+        "tags": [
+          "/deduction-requests/{conversationId}/ehr-message-received"
+        ],
+        "summary": "Update the status of deduction request when EHR is complete",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "conversationId",
+            "description": "Conversation Id (must be UUID)",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Deduction Request successfully updated when EHR received"
+          },
+          "401": {
+            "description": "Authorization header missing"
+          },
+          "403": {
+            "description": "Authorization key invalid"
+          },
+          "404": {
+            "description": "Conversation ID/Deduction request not found"
+          },
+          "422": {
+            "description": "Validation failed"
+          },
+          "503": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/errorResponse"
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ]
+      }
+    },
     "/deduction-requests/{conversationId}/pds-update": {
       "patch": {
         "tags": [
